# dlam-mc-core

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LAM_symbolic_arbitraryL.wl  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: model.md
examples/: basic_run.py
src/dlam_mc_core/: __init__.py  __main__.py  dynamics.py  generation.py  io.py  kernels.py  random.py  simulation.py  types.py
tests/: test_api.py  test_generation.py  test_io.py  test_kernels.py  test_main.py  test_random.py  test_simulation.py  test_validations.py
